--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.6.3"
+		"@sveltejs/adapter-vercel": "^5.6.3",
+		"@types/bun": "^1.2.4"
 	}
 }
