--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/bun": "^1.2.4",
 		"jsdom": "^26.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -36,6 +37,6 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.6.3",
-		"@types/bun": "^1.2.4"
+		"svelte-cloudinary": "^2.3.0"
 	}
 }
