--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-cloudinary": "^2.3.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0",
@@ -37,6 +38,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.6.3",
-		"svelte-cloudinary": "^2.3.0"
+		"cloudinary": "^2.5.1",
+		"zod": "^3.24.2"
 	}
 }
